update deprecated method