@@ -1,12 +1,13 @@
 import javax.xml.namespace.QName;
 import jakarta.xml.ws.Service;
+import java.net.URI;
 import java.net.URL;
 
 public class ClientApp {
 
     public static void main(String[] args) throws Exception {        
         // L'URL dove il WSDL è pubblicato
-        URL url = new URL("http://localhost:8080/conversore?wsdl");
+        URL url = new URI("http://localhost:8080/conversore?wsdl").toURL();
 
         // Parametri per identificare il servizio nel WSDL
         QName qname = new QName("http://example.it/", "ConversoreImplService");
